<resources>
    <string name="app_name">ProjectWeather</string>
    <string name="c">C</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity %1$s</string>
    <string name="nothing">Nothing</string>
    <string name="internet_error">Connection error , please turn on internet connection</string>
    <string name="open_network_settings">Open Network settings</string>
    <string name="select_country">Enter Place</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind %1$s km/hours</string>
    <string name="add_city">Add City</string>
    <string name="select_city_for_view_weather_info">Please Add City For Weather Info</string>
    <string name="recently_searches">Recently Searches</string>

    <string-array name="citys">
        <item>Select The City</item>
        <item>Armenia,Yerevan</item>
        <item>Russia,Moscow</item>
        <item>USA,Washington</item>
        <item>Georgia,Tbilisi</item>
    </string-array>
</resources>
