<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/countryditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_38sdp"
            android:hint="@string/select_country"
            android:textSize="20sp"
            android:background="@color/editTextBlueBackground"
            android:popupBackground="#0c88fe"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/weather"
            android:layout_alignEnd="@+id/weather"
            android:text="@string/c" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="2dp"
            android:width="150dp"
            android:height="150dp"
            android:gravity="center"
            android:text="@string/nothing"
            android:textAlignment="center"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/datcloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weather"
            android:layout_alignParentStart="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="55dp"
            android:text="@string/nothing" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/datcloudy"
            android:layout_alignBottom="@+id/datcloudy"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="@string/nothing" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pressure"
            android:layout_alignStart="@+id/pressure"
            android:text="Pressure" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pressure"
            android:layout_alignStart="@+id/datcloudy"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:text="@string/nothing" />
    </RelativeLayout>

</RelativeLayout>